0.4.3
 - fix: only edit/display one structure when changing large composites (#59)
 - enh: improved widget placement in collect and colocalize UI
 - setup: bump pyqtgraph from 0.12.4 to 0.13.3
 - setup: require Python 3.9
 - BREAKING: build recipe broken for macOS
0.4.2
 - fix: workaround for TypeError when moving ROI with mouse
 - ci: update badge and codecov
0.4.1
 - fix: exception in Collect/Colocalize tab when using the sliders
   in the visualization panel (#51)
0.4.0
 - fix: bump bmlab from 0.2.3 to 0.6.1 (file format changes) (#53)
0.3.1
 - fix: bump bmlab from 0.1.10 to 0.2.3 (file format changes) (#49)
0.3.0
 - feat: implement saving and loading of structure composites (#1)
 - fix: visualization issue with empty data (#47)
 - fix: editing layers not possible (regression from migration to PyQt6)
 - fix: initial wrong scaling in colocalize when input data has different
   pixel sizes along the dimensions
0.2.4
 - fix: properly handle FileNotFounderror (#44)
 - fix: properly handle bmlab exceptions (#42)
 - enh: reduce complexity of error message if an associated file
   is missing
 - fix: close bmlab session after loading data (#48)
 - build: add github action to create installer packages (#31)
 - build: add Github deploy action
 - build: pin shapely to fix macOS DMG packages
0.2.3
 - fix: properly handle nan-valued data in colocalize (#36)
 - fix: properly handle nan-valued data in collect (#36)
 - setup: bump bmlab to 0.1.8 (#37)
0.2.2
 - fix: properly handle nan-valued data (#25)
 - fix: correctly open bmlab files with multiple repetitions (#26)
0.2.1
 - enh: keep the order of data keys returned by bmlab for user convenience (#24)
 - setup: migrate from PyQt5 (5.15.0) to PyQt6 (6.2.0) (#23)
 - setup: bump bmlab from 0.1.1 to 0.1.2 (#24)
 - setup: bump pyqtgraph from 0.12.3 to 0.12.4 (#23)
0.2.0
 - feat: support bmlab session file format (#18)
 - enh: prevent users from loading the same file twice
0.1.2